# tmcombi

./: CMakeLists.txt  Jenkinsfile  LICENSE  README.md  WORKSPACE
Jenkins/: data-manipulations.Jenkinsfile  data.Jenkinsfile  see5-trainings-for-banchmarking.Jenkinsfile  see5.Jenkinsfile  tmcombi.Jenkinsfile
data/4layers_36points/: 4layers_36points.data  4layers_36points.names
data/adult/: README.txt  adult.names
data/adult_transformed/: README.txt  adult_transformed.names  adult_transformed.test  adult_transformed_2.5k.data
data/tmc_paper/: tmc_paper.data  tmc_paper.names  tmc_paper.test
data/tmc_paper_9/: tmc_paper.data  tmc_paper.names
data/tmc_paper_float1/: tmc_paper.data  tmc_paper.names
data/tmc_paper_int1/: tmc_paper.data
data/tmc_paper_int2/: tmc_paper.data  tmc_paper.test
env/: Dockerfile
envBazel/: Dockerfile
envCMake/: Dockerfile
envCmake/: Dockerfile
lib/: BUILD  border.cc  border.h  border_system.cc  border_system.h  border_system_creator.h  classifier.h  classifier_creator.h  classifier_creator_adaboost.cc  classifier_creator_adaboost.h  classifier_creator_dispatch_ptree.cc  classifier_creator_dispatch_ptree.h  classifier_creator_feature_selection.cc  classifier_creator_feature_selection.h  classifier_creator_fs.h  classifier_creator_fs_auc.cc  classifier_creator_fs_auc.h  classifier_creator_fs_density.cc  classifier_creator_fs_density.h  classifier_creator_fs_graph.cc  classifier_creator_fs_graph.h  classifier_creator_fs_n_fold.cc  classifier_creator_fs_n_fold.h  classifier_creator_superposition.h  classifier_creator_train.h  classifier_creator_train_fs.h  classifier_creator_train_tmc.cc  classifier_creator_train_tmc.h  classifier_reduced_features.cc  classifier_reduced_features.h  classifier_tmc.cc  classifier_tmc.h  classifier_transformed_features.cc  classifier_transformed_features.h  classifier_weighted_sum.cc  classifier_weighted_sum.h  data_container.h  evaluator.cc  evaluator.h  feature_mask.cc  (+52 more)
main/: BUILD  hello-world.cc  tmc.cc  tmc_classify_example.cc
python/: create_fs_dataset.py  data.py  names.py  prepareFashionMnist.ipynb  prepareStockData.py  transform2monotone.py
test/: BUILD  boost-test.cc  hello-test.cc  test_adaboost_adult_transformed_dataset.cc  test_adaboost_tmc_paper_dataset.cc  test_adult_transformed_dataset.cc  test_feature_selection_adult_transformed_dataset.cc  test_feature_selection_tmc_paper_dataset.cc  test_fs_adult_transformed_dataset.cc  test_fs_auc_adult_transformed_dataset.cc  test_fs_auc_tmc_paper_dataset.cc  test_fs_density_adult_transformed_dataset.cc  test_fs_graph_adult_transformed_dataset.cc  test_fs_graph_tmc_paper_dataset.cc  test_fs_n_fold_adult_transformed_dataset.cc  test_fs_n_fold_tmc_paper_dataset.cc  test_fs_tmc_paper_dataset.cc  test_graph_creator_26kNodes.cc  test_io.cc  test_rtree.cc  test_rtree25d.cc  test_rtree4d.cc  test_tmc_paper_dataset.cc  test_tmc_paper_weighted_dataset.cc
test/testServer/: README.txt  docker-compose.yml  init.sh  init_cloud.sh  init_local.sh  init_server.sh  init_shared.sh  nginxDockerfile  nginx_config  setup.sh
test/testServer-deprecated/: docker-compose.yml  nginxDockerfile
test/testServer/data/nginx/conf.d/: app.conf
test/testServer/data/nginx/conf.d.local/: app.conf
test/testServer/data/nginx/conf.d.server/: app.conf
testServer/: README.txt  docker-compose.yml  init_cloud.sh  init_local.sh  init_shared.sh
testServer/data/nginx/conf.d/: app.conf
testServer/data/nginx/conf.d.cloud/: app.conf  app.conf.minimal  app.conf.productive
testServer/data/nginx/conf.d.local/: app.conf
testServer/data/nginx/html/: index.html
testServer/shellinabox/: Dockerfile
tmcombi_rtree/: tmcombi_rtree.h
